Fix colour contrast issue
I've run this past Sue Vago, she's fine with us using a higher contrast colour
(the colour used for the links) in the copyright notice in order to meet standards
for colour contrast

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -4,7 +4,7 @@
 @include oColorsSetUseCase('o-footer--theme-dark__link', 'text', 'grey-tint1');
 @include oColorsSetUseCase('o-footer--theme-dark__link-hover', 'text', 'white');
 @include oColorsSetUseCase('o-footer--theme-dark__brand', 'background', 'grey-tint4');
-@include oColorsSetUseCase('o-footer--theme-dark__copyright', 'text', 'grey-tint2');
+@include oColorsSetUseCase('o-footer--theme-dark__copyright', 'text', 'grey-tint1');
 
 @include oColorsSetUseCase('o-footer--theme-light', 'text', 'grey-tint5');
 @include oColorsSetUseCase('o-footer--theme-light', 'border', 'claret');
@@ -12,4 +12,4 @@
 @include oColorsSetUseCase('o-footer--theme-light__link', 'text', 'grey-tint4');
 @include oColorsSetUseCase('o-footer--theme-light__link-hover', 'text', 'grey-tint5');
 @include oColorsSetUseCase('o-footer--theme-light__brand', 'background', 'pink-tint4');
-@include oColorsSetUseCase('o-footer--theme-light__copyright', 'text', 'grey-tint3');
+@include oColorsSetUseCase('o-footer--theme-light__copyright', 'text', 'grey-tint4');
